@@ -1,6 +1,12 @@
 2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix issues reported by Fedora reviewer.
+	* roboptim-core.spec.in: Fix dependencies as reported in ticket
+	https://bugzilla.redhat.com/show_bug.cgi?id=538820.
+
+2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix issues reported by Fedora reviewer.
 	* roboptim-core.spec.in: Fix many problems reported in ticket
 	https://bugzilla.redhat.com/show_bug.cgi?id=538820.
 
